# insights-lib

./: .gitignore  01_checkouts_table.ipynb  02_books.ipynb  03_customers.ipynb  04_modeling.ipynb  README.md  api_data_download.ipynb  pyproject.toml
