[tool.poetry]
name = "insights-lib"
version = "0.1.0"
package-mode = false
description = "Lib data analysis"
authors = ["Dalibor Veljkovic <dalibor.veljkovic49@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Strict, reproducible data stack
pandas = "^2.2.0"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.0"
scipy = "^1.15.0"
umap-learn = "^0.5.0"
statsmodels = "^0.14.0"
imbalanced-learn = "^0.13.0"
xgboost = "^3.0.0"
shap = "^0.47.0"
geopy = "^2.4.1"
python-dotenv = "^1.1.0"
openai = "^1.70.0"
googlemaps = "^4.10.0"
dython = "^0.7.9"
meteostat = "^1.6.8"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
ipykernel = "^6.29.3"
notebook = "^7.1.3"
jupytext = "^1.16.1"

# Formatting & typing tools
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
